Fixed footer alignment

--- a/css/style.css
+++ b/css/style.css
@@ -433,6 +433,7 @@
 		#banner .copyright {
 			font-size: 0.7em;
 			line-height: 1em;
+			text-align: center;
 		}
 
 			#banner .copyright a {
